--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@
         }
 
         body {
-            font-family: 'Quicksand', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -40,7 +39,7 @@
             padding: 2rem;
             position: relative;
             overflow: hidden;
-            min-height: 200px;
+            min-height: 150px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
         }
 
@@ -107,14 +106,14 @@
         }
 
         nav button {
+            padding: 15px 30px;
+            font-size: 1.2em;
             background: linear-gradient(to bottom right, #3498db, #2980b9);
             color: #fff;
             border: none;
-            padding: 0.8rem 1.5rem;
             margin: 0 0.5rem;
             cursor: pointer;
             border-radius: 25px;
-            font-family: 'Quicksand', sans-serif;
             font-weight: 600;
             transition: all 0.3s;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
@@ -167,6 +166,11 @@
         .image-container {
             text-align: center;
             margin: 1rem 0;
+        }
+
+        .image-container img {
+            max-width: 100%; /* Umožní obrázkům měnit velikost s oknem */
+            height: auto;
         }
 
         h2 {
