--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,11 @@
         }
 
         body {
+            font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #e0f7fa, #b2ebf2);
+            background: #f7f7f7;
             overflow-x: hidden;
         }
 
@@ -33,7 +34,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(45deg, #2c3e50, #3498db);
+            background: linear-gradient(90deg, #2c3e50 0%, #3498db 50%, #2c3e50 100%);
             color: #fff;
             text-align: center;
             padding: 2rem;
@@ -169,7 +170,7 @@
         }
 
         .image-container img {
-            max-width: 100%; /* Umožní obrázkům měnit velikost s oknem */
+            max-width: 100%;
             height: auto;
         }
 
